// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note can expand and collapse properly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "borderWidth": 0.5,
        "marginBottom": 15,
        "padding": 15,
      },
      Object {
        "backgroundColor": "#e1f5fe",
        "borderColor": "#03a9f4",
      },
    ]
  }
>
  <View
    style={
      Object {
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <ThemedComponent
      color="#03a9f4"
      name="arrow-drop-down"
      onPress={[Function]}
      percent={50}
      size={28}
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginBottom": 0,
      }
    }
  >
    <ThemedComponent
      color="#03a9f4"
      name="info"
      style={
        Object {
          "marginRight": 10,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "RobotoBold",
            "fontSize": 18,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      collapsed
    </Text>
  </View>
</View>
`;

exports[`Note can expand and collapse properly 2`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "borderWidth": 0.5,
        "marginBottom": 15,
        "padding": 15,
      },
      Object {
        "backgroundColor": "#e1f5fe",
        "borderColor": "#03a9f4",
      },
    ]
  }
>
  <View
    style={
      Object {
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <ThemedComponent
      color="#03a9f4"
      name="arrow-drop-up"
      onPress={[Function]}
      percent={50}
      size={28}
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <ThemedComponent
      color="#03a9f4"
      name="info"
      style={
        Object {
          "marginRight": 10,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "RobotoBold",
            "fontSize": 18,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      collapsed
    </Text>
  </View>
  <View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Roboto",
            "fontSize": 14,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      <Text>
        expanded
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Note can expand and collapse properly 3`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "borderWidth": 0.5,
        "marginBottom": 15,
        "padding": 15,
      },
      Object {
        "backgroundColor": "#e1f5fe",
        "borderColor": "#03a9f4",
      },
    ]
  }
>
  <View
    style={
      Object {
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <ThemedComponent
      color="#03a9f4"
      name="arrow-drop-down"
      onPress={[Function]}
      percent={50}
      size={28}
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginBottom": 0,
      }
    }
  >
    <ThemedComponent
      color="#03a9f4"
      name="info"
      style={
        Object {
          "marginRight": 10,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "RobotoBold",
            "fontSize": 18,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      collapsed
    </Text>
  </View>
</View>
`;

exports[`Note renders properly as error note with error type 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "borderWidth": 0.5,
        "marginBottom": 15,
        "padding": 15,
      },
      Object {
        "backgroundColor": "#ffebee",
        "borderColor": "#f44336",
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <ThemedComponent
      color="#f44336"
      name="error"
      style={
        Object {
          "marginRight": 10,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "RobotoBold",
            "fontSize": 18,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      Error
    </Text>
  </View>
  <View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Roboto",
            "fontSize": 14,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      <Text>
        An error occurred!
      </Text>
    </Text>
    <Text
      style={
        Object {
          "fontStyle": "italic",
          "marginTop": 10,
          "textAlign": "right",
        }
      }
    >
      Last attempted 
      12:00:00 AM
    </Text>
  </View>
</View>
`;

exports[`Note renders properly as info note with info type 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "borderWidth": 0.5,
        "marginBottom": 15,
        "padding": 15,
      },
      Object {
        "backgroundColor": "#e1f5fe",
        "borderColor": "#03a9f4",
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <ThemedComponent
      color="#03a9f4"
      name="info"
      style={
        Object {
          "marginRight": 10,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "RobotoBold",
            "fontSize": 18,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      Info
    </Text>
  </View>
  <View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Roboto",
            "fontSize": 14,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      <Text>
        Information here.
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Note renders properly as info note with tip type 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 3,
        "borderWidth": 0.5,
        "marginBottom": 15,
        "padding": 15,
      },
      Object {
        "backgroundColor": "#eceff1",
        "borderColor": "#607d8b",
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <ThemedComponent
      color="#607d8b"
      name="lightbulb-outline"
      style={
        Object {
          "marginRight": 10,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "RobotoBold",
            "fontSize": 18,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      Tip
    </Text>
  </View>
  <View>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Roboto",
            "fontSize": 14,
          },
          Object {
            "color": undefined,
          },
        ]
      }
    >
      <Text>
        Tip here.
      </Text>
    </Text>
  </View>
</View>
`;
